[gd_scene load_steps=11 format=3 uid="uid://c7wmwixcvyr41"]

[ext_resource type="Script" path="res://characters/enemy.gd" id="1_514o1"]
[ext_resource type="Texture2D" uid="uid://bwiqypqnkj4p4" path="res://assets/player/rb_sheet.png" id="1_w38js"]
[ext_resource type="PackedScene" uid="uid://d4jukjjk8qioe" path="res://areas/player_detection.tscn" id="3_6nwpr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tyxu5"]

[sub_resource type="Animation" id="Animation_hwf6o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5iy68"]
resource_name = "attack"
length = 1.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_l0pn2"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_6b0fi"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fc56q"]
_data = {
"RESET": SubResource("Animation_hwf6o"),
"attack": SubResource("Animation_5iy68"),
"idle": SubResource("Animation_l0pn2"),
"run": SubResource("Animation_6b0fi")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oxyig"]

[node name="Enemy" type="CharacterBody3D"]
collision_mask = 9
axis_lock_linear_y = true
axis_lock_linear_z = true
script = ExtResource("1_514o1")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.67547, 0)
shaded = true
alpha_cut = 2
texture = ExtResource("1_w38js")
hframes = 6
vframes = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0.568896, 2.52471, 0)
shape = SubResource("CapsuleShape3D_tyxu5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fc56q")
}

[node name="PlayerDetection" parent="." instance=ExtResource("3_6nwpr")]

[node name="CollisionShape3D" parent="PlayerDetection" index="0"]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0.323411, 2.22057, 0)

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.706295, 7.13056, 0)
text = "STATE"
font_size = 72
outline_size = 3

[node name="Stats" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.706295, 6.41381, 0)
text = "STATS"
outline_size = 3

[node name="RightRay" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 1.13496, 1.48738, 0)
target_position = Vector3(0, -2.5, 0)
collision_mask = 9
debug_shape_thickness = 5

[node name="LeftRay" type="RayCast3D" parent="."]
transform = Transform3D(4.37114e-08, -1, 1.50996e-07, -1, -4.37114e-08, 0, 6.60024e-15, -1.50996e-07, -1, -0.0812601, 1.48738, 0)
target_position = Vector3(0, 2.5, 0)
collision_mask = 9
debug_shape_thickness = 5

[node name="JumpCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Hurtbox" type="Area3D" parent="."]
collision_layer = 128
collision_mask = 256
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0.564827, 2.46607, 0)
shape = SubResource("CapsuleShape3D_oxyig")

[node name="StaggerTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="timeout" from="JumpCooldown" to="." method="_on_jump_cooldown_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="StaggerTimer" to="." method="_on_stagger_timer_timeout"]

[editable path="PlayerDetection"]
